--- a/estudiantes/templates/estudiantes/detalle.html
+++ b/estudiantes/templates/estudiantes/detalle.html
@@ -29,8 +29,8 @@
 
                         <ul class="list-group">
                             <li class="list-group-item">Sede: {{ estudiante.cod_sede }}</li>
-                            <li class="list-group-item">Facultad: {{ estudiante.cod_unidad }}</li>
-                            <li class="list-group-item">Escuela: {{ estudiante.cod_seccion }}</li>
+                            <li class="list-group-item">Facultad: {{ estudiante.cod_facultad }}</li>
+                            <li class="list-group-item">Escuela: {{ estudiante.cod_escuela }}</li>
                             <li class="list-group-item">Carrera: {{ estudiante.cod_carrera }}</li>
                         </ul>
                         <hr/>
