--- a/perfiles/templates/perfiles/privado_redux.html
+++ b/perfiles/templates/perfiles/privado_redux.html
@@ -43,8 +43,8 @@
                 <li class="list-group-item">Fecha de Inicio de Labores: {{ perfil.tiempo_laborado }}</li>
                 <li class="list-group-item">Categoria: {{ perfil.get_categoria_display }}</li>
                 <li class="list-group-item">Sede: {{ perfil.cod_sede }}</li>
-                <li class="list-group-item">Facultad: {{ perfil.cod_unidad }}</li>
-                <li class="list-group-item">Departamento: {{ perfil.cod_seccion }}</li>
+                <li class="list-group-item">Facultad: {{ perfil.cod_facultad }}</li>
+                <li class="list-group-item">Departamento: {{ perfil.cod_escuela }}</li>
             </ul>
         </div>
     </div>
