--- a/actividades/templates/actividades/include/tabla_actividad.html
+++ b/actividades/templates/actividades/include/tabla_actividad.html
@@ -16,16 +16,20 @@
                 <td>{{ actividad.get_clase_display }}</td>
                 <td>{{ actividad.fecha_creacion }}</td>
                 <td>{{ actividad.get_estado_display }}</td>
+                </td>
                 <td>
-                    <a class="btn btn-outline-primary" href="{{ actividad.get_absolute_url }}">Ver</a>
                     {% if perms.actividad.aprobar_actividad and actividad.usuario not in request.user or request.user.is_superuser %}
                         <form method="post" action="{% url 'actividad:aprobar' actividad.pk %}">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-outline-success">Aprobar
-                            </button>
+                            <div class="btn-group">
+                                <a class="btn btn-outline-primary" href="{{ actividad.get_absolute_url }}">Ver</a>
+                                <button type="submit" class="btn btn-outline-success">Aprobar
+                                </button>
+                                <a class="btn btn-outline-danger"
+                                   href="{% url 'actividad:rechazar' actividad.pk %}">Rechazar</a>
+                            </div>
                         </form>
-                        <a class="btn btn-outline-danger"
-                           href="{% url 'actividad:rechazar' actividad.pk %}">Rechazar</a>{% endif %}
+                    {% endif %}
                 </td>
             </tr>
         {% empty %}
