--- a/perfiles/templates/perfiles/editar.html
+++ b/perfiles/templates/perfiles/editar.html
@@ -98,10 +98,10 @@
                                     <div class="form-row">
                                         <div class="form-group col-md-4">{{ form.cod_sede.label_tag }}
                                             {{ form.cod_sede.errors }}{{ form.cod_sede }}</div>
-                                        <div class="form-group col-md-4">{{ form.cod_unidad.label_tag }}
-                                            {{ form.cod_unidad.errors }}{{ form.cod_unidad }}</div>
-                                        <div class="form-group col-md-4">{{ form.cod_seccion.label_tag }}
-                                            {{ form.cod_seccion.errors }}{{ form.cod_seccion }}</div>
+                                        <div class="form-group col-md-4">{{ form.cod_facultad.label_tag }}
+                                            {{ form.cod_facultad.errors }}{{ form.cod_facultad }}</div>
+                                        <div class="form-group col-md-4">{{ form.cod_escuela.label_tag }}
+                                            {{ form.cod_escuela.errors }}{{ form.cod_escuela }}</div>
                                     </div>
                                     <hr/>
                                     <button type="submit" class="btn btn-primary"><i class="far fa-save"></i> Guardar
