--- a/actividades/templates/actividades/include/tabla_actividad.html
+++ b/actividades/templates/actividades/include/tabla_actividad.html
@@ -1,40 +1,42 @@
 <div class="table table-responsive">
-    <table class="table" id="actividades">
-        <thead>
-        <tr>
-            <th scope="col">Titulo</th>
-            <th scope="col">Clase</th>
-            <th scope="col">Fecha</th>
-            <th scope="col">Estado</th>
-            <th scope="col">Opciones</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for actividad in actividades %}
+    {% if actividades %}
+        <table class="table" id="actividades">
+            <thead>
             <tr>
-                <td>{{ actividad.nombre_actividad }}</td>
-                <td>{{ actividad.get_clase_display }}</td>
-                <td>{{ actividad.fecha_creacion }}</td>
-                <td>{{ actividad.get_estado_display }}</td>
-                </td>
-                <td>
-                    {% if perms.actividad.aprobar_actividad and actividad.usuario not in request.user or request.user.is_superuser %}
-                        <form method="post" action="{% url 'actividad:aprobar' actividad.pk %}">
-                            {% csrf_token %}
-                            <div class="btn-group">
-                                <a class="btn btn-outline-primary" href="{{ actividad.get_absolute_url }}">Ver</a>
-                                <button type="submit" class="btn btn-outline-success">Aprobar
-                                </button>
-                                <a class="btn btn-outline-danger"
-                                   href="{% url 'actividad:rechazar' actividad.pk %}">Rechazar</a>
-                            </div>
-                        </form>
-                    {% endif %}
-                </td>
+                <th scope="col">Titulo</th>
+                <th scope="col">Clase</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Estado</th>
+                <th scope="col">Opciones</th>
             </tr>
-        {% empty %}
-            <div class="alert alert-info text-center">No hay actividades registradas</div>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for actividad in actividades %}
+                <tr>
+                    <td>{{ actividad.nombre_actividad }}</td>
+                    <td>{{ actividad.get_clase_display }}</td>
+                    <td>{{ actividad.fecha_creacion }}</td>
+                    <td>{{ actividad.get_estado_display }}</td>
+                    </td>
+                    <td>
+                        {% if perms.actividad.aprobar_actividad and actividad.usuario not in request.user or request.user.is_superuser %}
+                            <form method="post" action="{% url 'actividad:aprobar' actividad.pk %}">
+                                {% csrf_token %}
+                                <div class="btn-group">
+                                    <a class="btn btn-outline-primary" href="{{ actividad.get_absolute_url }}">Ver</a>
+                                    <button type="submit" class="btn btn-outline-success">Aprobar
+                                    </button>
+                                    <a class="btn btn-outline-danger"
+                                       href="{% url 'actividad:rechazar' actividad.pk %}">Rechazar</a>
+                                </div>
+                            </form>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <div class="alert alert-info text-center">No hay actividades pendientes</div>
+    {% endif %}
 </div>
