--- a/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
+++ b/estudiantes/templates/estudiantes/anteproyecto/include/tabla.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-    <table class="table table-responsive">
+    <table class="table table-bordered" id="anteproyectos">
         <thead>
         <tr>
             <th>Nombre del Proyecto</th>
@@ -13,10 +13,13 @@
                 <td>{{ anteproyecto.nombre_proyecto }}</td>
                 <td>{{ anteproyecto.fecha_registro }}</td>
                 <td>
-                    {# Ver #}<a class="btn btn-outline-info" href="#"> Ver</a>
-                    {# Editar #}<a class="btn btn-outline-info" href="#"> Editar</a>
-                    {# Rechazar #}<a href=# class="btn btn-outline-danger"> Rechazar</a>
-                    {# Aprobar #}<a href="#" class="btn-outline-success">Aprobar</a>
+                    <div class="btn-group">
+                        {# Ver #}<a class="btn btn-outline-info" href="{{ anteproyecto.get_absolute_url }}"> Ver</a>
+                        {# Editar #}<a class="btn btn-outline-info"
+                                       href="{% url 'estudiante:editar-anteproyecto' anteproyecto.pk %}"> Editar</a>
+                        {# Rechazar #}<a href=# class="btn btn-outline-danger"> Rechazar</a>
+                        {# Aprobar #}<a href="#" class="btn-outline-success">Aprobar</a>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
