--- a/ubicacion/templates/ubicacion/sede.html
+++ b/ubicacion/templates/ubicacion/sede.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="card-body">
                         <p class="card-text">
-                        <h3 class="text-right">{{ sede.unidades.count }}</h3></p>
+                        <h3 class="text-right">{{ sede.facultades.count }}</h3></p>
                     </div>
                 </div>
             </div>
